@@ -386,12 +386,6 @@ common_configure_args = \
 #common_configure_args += \
 #		--without-builtin-hashlib-hashes
 
-ifneq (,$(filter $(DEB_HOST_ARCH), or1k))
-  common_configure_args += --without-ffi
-else
-  common_configure_args += --with-system-ffi
-endif
-
 ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
   common_configure_args += --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)
   common_configure_args += --with-build-python
