@@ -7,6 +7,7 @@ python3.12 (3.12.2-5) UNRELEASED; urgency=medium
       third-party packages.
   * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.
   * d/rules: Move configure/build targets for each build together.
+  * Drop ffi configure options, obsolete.
 
  -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 12:34:19 +0200
 
